--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -19,6 +19,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<orika.version>1.5.0</orika.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
@@ -55,6 +56,20 @@
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>2.6.1</version>
 		</dependency>
+		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!-- ORIKA -->
+		<dependency>
+   			<groupId>ma.glasnost.orika</groupId>
+   			<artifactId>orika-core</artifactId>
+   			<version>${orika.version}</version>
+		</dependency>
+        <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
