--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -81,6 +81,11 @@
 			<artifactId>messaging-dtos</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>com.codependent.stream</groupId>
+			<artifactId>delegated-messaging</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
