--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -24,7 +24,8 @@ spring:
             producer:
               sync: true
       bindings:
-        ordersIn: 
+        ordersIn:
+          group: order-service 
           destination: orders
         ordersOut: 
           destination: orders
