--- a/payment-service/src/main/resources/bootstrap.yml
+++ b/payment-service/src/main/resources/bootstrap.yml
@@ -25,6 +25,7 @@ spring:
               sync: true
       bindings:
         ordersIn: 
+          group: payment-service
           destination: orders
         ordersOut: 
           destination: orders
