--- a/shipping-service/src/main/resources/bootstrap.yml
+++ b/shipping-service/src/main/resources/bootstrap.yml
@@ -25,6 +25,7 @@ spring:
               sync: true
       bindings:
         ordersIn: 
+          group: shipping-service 
           destination: orders
         ordersOut: 
           destination: orders
