serialized as json not x-java-object

--- a/payment-service/src/main/resources/bootstrap.yml
+++ b/payment-service/src/main/resources/bootstrap.yml
@@ -29,6 +29,7 @@ spring:
           destination: orders
         ordersOut: 
           destination: orders
+          content-type: application/json
         
 server:
   port: 8282
