--- a/stock-service/pom.xml
+++ b/stock-service/pom.xml
@@ -11,14 +11,16 @@
 	</parent>
 
 	<groupId>com.codependent.microshopping</groupId>
-	<artifactId>stock-service</artifactId>
+	<artifactId>product-service</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>stock-service</name>
+	<name>product-service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<spring-kafka.version>1.0.4.RELEASE</spring-kafka.version>
+		<orika.version>1.5.0</orika.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
@@ -46,6 +48,16 @@
 	        <artifactId>spring-cloud-starter-stream-kafka</artifactId>
 	    </dependency>
 	    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!-- ORIKA -->
+		<dependency>
+   			<groupId>ma.glasnost.orika</groupId>
+   			<artifactId>orika-core</artifactId>
+   			<version>${orika.version}</version>
+		</dependency>
+	    <dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
 		    <version>2.6.1</version>
@@ -54,6 +66,15 @@
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger-ui</artifactId>
 		    <version>2.6.1</version>
+		</dependency>
+		<dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
+     	<dependency>
+			<groupId>com.codependent.stream</groupId>
+			<artifactId>delegated-messaging</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
