--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -20,6 +20,7 @@
 
 	<properties>
 		<spring-kafka.version>1.0.4.RELEASE</spring-kafka.version>
+		<orika.version>1.5.0</orika.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
@@ -46,10 +47,29 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-starter-stream-kafka</artifactId>
 	    </dependency>
+   	    <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!-- ORIKA -->
+		<dependency>
+   			<groupId>ma.glasnost.orika</groupId>
+   			<artifactId>orika-core</artifactId>
+   			<version>${orika.version}</version>
+		</dependency>
+		<dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.codependent.stream</groupId>
+			<artifactId>delegated-messaging</artifactId>
+			<version>1.0.0-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
