--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -27,6 +27,8 @@ spring:
         ordersIn:
           group: order-service 
           destination: orders
+          consumer:
+            max-attempts: 5
         ordersOut: 
           destination: orders
           content-type: application/json
