kubernetes order and product services

--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -19,6 +19,7 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
+		<docker.image.prefix>codependent</docker.image.prefix>
 		<spring-kafka.version>1.0.4.RELEASE</spring-kafka.version>
 		<orika.version>1.5.0</orika.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -30,10 +31,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-eureka</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -108,6 +105,31 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<plugin>
+	            <groupId>com.spotify</groupId>
+	            <artifactId>docker-maven-plugin</artifactId>
+	            <version>0.4.13</version>
+	            <executions>
+           			<execution>
+             				<id>my-execution-id</id>
+             				<phase>install</phase>
+             				<goals>
+               				<goal>build</goal>
+             				</goals>
+           			</execution>
+       			</executions>
+	            <configuration>
+	                <imageName>${docker.image.prefix}/${project.artifactId}</imageName>
+	                <dockerDirectory>src/main/docker</dockerDirectory>
+	                <resources>
+	                    <resource>
+	                        <targetPath>/</targetPath>
+	                        <directory>${project.build.directory}</directory>
+	                        <include>${project.build.finalName}.jar</include>
+	                    </resource>
+	                </resources>
+	            </configuration>
+	        </plugin>
 		</plugins>
 	</build>
 
