--- a/order-processor/pom.xml
+++ b/order-processor/pom.xml
@@ -11,11 +11,11 @@
 	</parent>
 
 	<groupId>com.codependent.microshopping</groupId>
-	<artifactId>product-service</artifactId>
+	<artifactId>order-processor</artifactId>
 	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>product-service</name>
+	<name>order-service</name>
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
@@ -48,16 +48,6 @@
 	        <artifactId>spring-cloud-starter-stream-kafka</artifactId>
 	    </dependency>
 	    <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <!-- ORIKA -->
-		<dependency>
-   			<groupId>ma.glasnost.orika</groupId>
-   			<artifactId>orika-core</artifactId>
-   			<version>${orika.version}</version>
-		</dependency>
-	    <dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
 		    <version>2.6.1</version>
@@ -68,6 +58,16 @@
 		    <version>2.6.1</version>
 		</dependency>
 		<dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-jpa</artifactId>
+        </dependency>
+        <!-- ORIKA -->
+		<dependency>
+   			<groupId>ma.glasnost.orika</groupId>
+   			<artifactId>orika-core</artifactId>
+   			<version>${orika.version}</version>
+		</dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
         </dependency>
