--- a/stock-service/src/main/resources/bootstrap.yml
+++ b/stock-service/src/main/resources/bootstrap.yml
@@ -26,12 +26,15 @@ spring:
       bindings:
         ordersIn:
           group: product-service 
-          destination: orders
+          destination: orders11
           consumer:
             max-attempts: 5
+            header-mode: raw
         ordersOut: 
-          destination: orders
+          destination: orders11
           content-type: application/json
+          producer:
+            header-mode: raw
         
 server:
   port: 8686
