--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -46,6 +46,11 @@
 	        <groupId>org.springframework.cloud</groupId>
 	        <artifactId>spring-cloud-starter-stream-kafka</artifactId>
 	    </dependency>
+   		<dependency>
+		    <groupId>org.apache.kafka</groupId>
+		    <artifactId>kafka-streams</artifactId>
+		    <version>0.10.2.1</version>
+		</dependency>
 	    <dependency>
 		    <groupId>io.springfox</groupId>
 		    <artifactId>springfox-swagger2</artifactId>
