--- a/order-service/pom.xml
+++ b/order-service/pom.xml
@@ -77,6 +77,11 @@
 			<scope>test</scope>
 		</dependency>
 		<dependency>
+	        <groupId>org.springframework.cloud</groupId>
+	        <artifactId>spring-cloud-stream-test-support</artifactId>
+	        <scope>test</scope>
+	    </dependency>
+		<dependency>
 			<groupId>com.codependent.stream</groupId>
 			<artifactId>delegated-messaging</artifactId>
 			<version>1.0.0-SNAPSHOT</version>
