--- a/order-service/src/main/resources/bootstrap.yml
+++ b/order-service/src/main/resources/bootstrap.yml
@@ -52,5 +52,5 @@ logging:
 #   file: /var/memento/security.log
   level:
     org.springframework.cloud.stream: INFO
-    org.apache.kafka: INFO
+    org.apache.kafka: ERROR
     com.netflix: ERROR
