--- a/product-service/src/main/resources/bootstrap.yml
+++ b/product-service/src/main/resources/bootstrap.yml
@@ -54,7 +54,7 @@ logging:
 #   file: /var/memento/security.log
   level:
     org.springframework: ERROR
-    org.apache.kafka: DEBUG
+    org.apache.kafka: ERROR
     org.springframework.stream: INFO
     org.springframework.kafka: INFO
     com.netflix: ERROR
