--- a/payment-service/pom.xml
+++ b/payment-service/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>1.5.1.RELEASE</version>
+		<version>1.5.4.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
@@ -19,7 +19,6 @@
 	<description>Demo project for Spring Boot</description>
 
 	<properties>
-		<spring-kafka.version>1.0.4.RELEASE</spring-kafka.version>
 		<orika.version>1.5.0</orika.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
@@ -57,10 +56,11 @@
    			<artifactId>orika-core</artifactId>
    			<version>${orika.version}</version>
 		</dependency>
-		<dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-        </dependency>
+        <dependency>
+		    <groupId>org.apache.kafka</groupId>
+		    <artifactId>kafka-streams</artifactId>
+		    <version>0.10.2.1</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -73,17 +73,10 @@
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>spring-cloud-dependencies</artifactId>
-				<version>Camden.SR4</version>
+				<version>Dalston.SR1</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
-			<dependency>
-	            <groupId>org.springframework.cloud</groupId>
-	            <artifactId>spring-cloud-stream-dependencies</artifactId>
-	            <version>Brooklyn.SR1</version>
-	            <type>pom</type>
-            	<scope>import</scope>
-        	</dependency>
 		</dependencies>
 	</dependencyManagement>
 
