--- a/payment-service/src/main/resources/bootstrap.yml
+++ b/payment-service/src/main/resources/bootstrap.yml
@@ -29,12 +29,12 @@ spring:
           destination: orders
           consumer:
             max-attempts: 5
+            header-mode: raw
         ordersOut: 
           destination: orders
           content-type: application/json
-        paymentsOut: 
-          destination: payments
-          content-type: application/json          
+          producer:
+            header-mode: raw    
         
 server:
   port: 8282
